--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -10,3 +10,5 @@ $nouveau: #008766;
 
 $txt-main: Roboto;
 $txt-fantasy: Shrikhand;
+$gradient: linear-gradient(to top, $first-color, $second-color);
+$gradientreverse: linear-gradient(to bottom, $first-color, $second-color);
