--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,8 +1,6 @@
 header{
-    width: 100%;   
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
+    @include boxbasic;
+    @include column;
     align-items: center;
     margin: auto;
 
@@ -12,22 +10,19 @@ header{
     }
 
     .header-location{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
+        @include boxbasic;
+        @include row;
         justify-content: center;
         color: $dark-grey;
-        padding: 20px 0;
-        gap: 17px;
+        padding: 20px;
+        gap: 20px;
         background-color: $middle-grey;
         align-items: baseline;
 
         input{
             width: 120px;
             height: 25px;
-            border: none;
-            background-color: $middle-grey;
-        }
-        
+            @include transparent;
+        }        
     }
 }
