--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -1,5 +1,36 @@
+@mixin boxbasic{
+    width: 100%;
+    box-sizing: border-box;
+}
+
+@mixin column{
+    display: flex;
+    flex-direction: column;
+}
+
+@mixin row{
+    display: flex;
+    flex-direction: row;
+}
+
+@mixin transparent{
+    border: none;
+    background-color: transparent;
+}
+
+@mixin photo{
+    width: 100%;
+    max-height: 275px;
+    overflow: hidden;
+}
+
+@mixin card{
+    background-color: $white;
+    border-radius: 15px;
+}
+
 @mixin button--fantasy{
-    background: linear-gradient(to top, $first-color, $second-color);
+    background: $gradient;
     color: #ffffff;
     height: 50px;
     width: fit-content;
@@ -8,10 +39,6 @@
     border: none;
     border-radius: 25px;
     align-self: center;
-}
-
-@mixin ombrage-soft{
-    box-shadow: 0px 4px 10px 0px #0000001A;
 }
 
 @mixin ombrage-medium{
@@ -26,10 +53,6 @@
 @mixin txt__fantasy{
     font-family: $txt-fantasy;
     font-weight: 500;
-}
-
-@mixin small{
-    font-size: 1em;
 }
 
 @mixin medium{
