--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,7 +1,7 @@
 @import "partials/variables";
 @import "partials/mixins";
 @import "partials/animations";
-//@import "/partials/loader";
+@import "partials/loader";
 @import "partials/structure";
 @import "partials/header";
 //@import "/sass/partials/location";
