--- a/sass/index.css
+++ b/sass/index.css
@@ -1,3 +1,67 @@
+@charset "UTF-8";
+.loader {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: auto;
+}
+.loader .table {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loader .table .icon {
+  width: 30px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+}
+.loader .table .icon img {
+  max-height: 100px;
+}
+.loader .table .icon .knife {
+  max-width: 70px;
+}
+.loader .table .plate {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*            .circle{
+                  width: 60px;
+                  height: 60px;
+                  position: absolute;
+                  z-index: 2;
+                  border: 3px $black solid;
+                  border-radius: 40px;
+              }*/
+}
+.loader .table .plate .ring {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background: conic-gradient(#000000, #eaeaea);
+  border-radius: 50px;
+}
+.loader .table .plate .center {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  z-index: 1;
+  background-color: #ffffff;
+  border-radius: 35px;
+}
+
+/*l'idée finale étant que ring tourne pour donner
+ l'impression de chargement,
+et que fork et knife se secouent légèrement
+(inclinaison à gauche puis à droite,
+faible et vif, comme un tremblement)*/
 body {
   font-family: Roboto;
   font-weight: 500;
