--- a/sass/index.css
+++ b/sass/index.css
@@ -119,17 +119,6 @@ p {
 
 a {
   text-decoration: none;
-  display: flex;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-  padding-bottom: 3px;
 }
 
 header {
@@ -173,9 +162,11 @@ header .header-location input {
   padding: 0 25px;
   border: none;
   border-radius: 25px;
-  align-self: center;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  display: flex;
   margin: 25px auto;
+  justify-self: center;
+  line-height: 50px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 .button-fantasy:hover {
@@ -327,18 +318,26 @@ header .header-location input {
 footer {
   width: 100%;
   box-sizing: border-box;
+  display: flex;
   background-color: #353535;
   padding: 25px;
 }
-footer h1 {
+footer .info {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+footer .info h1 {
   font-family: Shrikhand;
   font-weight: 500;
   font-size: 1.4em;
   color: #ffffff;
 }
-footer .info {
-  display: flex;
-  flex-direction: column;
+@media (min-width: 1024px) {
+  footer .info h1 {
+    text-align: end;
+  }
 }
 footer .info a {
   text-decoration: none;
@@ -347,6 +346,30 @@ footer .info a {
 footer .info .fa-solid {
   font-size: 1.2em;
   color: #ffffff;
+}
+footer .info .info--contact {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1024px) {
+  footer {
+    justify-content: end;
+  }
+  footer .info {
+    width: 75%;
+    justify-content: right;
+    gap: 5%;
+    flex-direction: row-reverse;
+  }
+  footer .info .info--contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+  }
 }
 
 .menu-header {
