--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -16,6 +16,8 @@ body {
     text-align: center;
 }
 
+
+
 .section-bgd{
     @include boxbasic;
     @include column;
@@ -47,4 +49,16 @@ p{
 
 a{
     text-decoration: none;
+}
+
+@media (min-width : 1024px) {
+    section{
+        padding: 50px 80px;
+    }
+
+    .howto{
+        @include boxbasic;
+        @include row;
+        justify-content: space-between;
+    }
 }
