--- a/sass/index.css
+++ b/sass/index.css
@@ -189,10 +189,12 @@ header .header-location input {
   justify-self: center;
   line-height: 50px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  transition: all ease-in-out 0.3s;
 }
 
 .button-fantasy:hover {
   background: linear-gradient(to bottom, #9356dc, #ff79da);
+  transition: all ease-in-out 0.3s;
 }
 
 .button-new {
