--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -35,6 +35,7 @@ footer{
         }
     }
     
+    //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
     @media (min-width : 1024px) {
         justify-content: end;
         .info{
