--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -51,6 +51,7 @@ a{
     text-decoration: none;
 }
 
+    //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
 @media (min-width : 1024px) {
     section{
         padding: 50px 80px;
