--- a/sass/partials/_use-card.scss
+++ b/sass/partials/_use-card.scss
@@ -38,7 +38,8 @@
         }
         
     }
-
+    
+    //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
     @media (min-width : 1024px) {
         width: 33%;
     }
