--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -86,6 +86,20 @@
 
         }
     }
+
+    //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
+    @media (min-width : 1025px) {
+        width: 80%;
+        max-width: 1220px;
+        align-self: center;
+        padding-left:15% ;
+        padding-right: 15%;
+    }
+
+    //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
+    @media (min-width : 768px), (max-width: 1024px) {
+
+    }
 }
 
 .card-choice{
