--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -51,4 +51,9 @@ footer{
              }
         }           
     }
+
+    //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
+    @media (min-width : 768px), (max-width: 1024px) {
+
+    }
 }
