--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -73,4 +73,10 @@ a{
             width: 45%;
         }
     }
+
+    //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
+    @media (min-width : 768px) and (max-width: 1024px) {
+
+    }
+
 }
