--- a/sass/partials/_use-card.scss
+++ b/sass/partials/_use-card.scss
@@ -44,4 +44,9 @@
         width: 33%;
     }
 
+    //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
+    @media (min-width : 768px), (max-width: 1024px) {
+
+    }
+
 }
