--- a/sass/index.css
+++ b/sass/index.css
@@ -254,46 +254,50 @@ header .header-location input {
 
 .chevron {
   display: none;
+  width: 70px;
+  height: 70px;
+  margin: 120px 0;
+  font-size: 25px;
+  background-color: #ffffff;
+  border-radius: 35px;
+  border: none;
+  justify-items: center;
+  color: #353535;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+}
+.chevron :hover {
+  color: #9356dc;
+}
+.chevron i {
+  padding: 0;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .chevron {
     display: block;
-    width: 70px;
-    height: 70px;
-    margin: 120px 0;
-    font-size: 25px;
-    text-align: center;
-    background-color: #ffffff;
-    border-radius: 35px;
-    border: none;
-    align-items: auto;
-    justify-items: center;
-    color: #353535;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
-  }
-  .chevron :hover {
-    color: #9356dc;
-  }
-  .chevron i {
-    padding: 0;
   }
 }
-.chevron .right {
+
+.right {
   cursor: pointer;
 }
-.chevron .right + .menu-container .menu__container--extend {
+
+.right + .menu-container .menu__container--extend {
   transition: transform 0.7s ease-in-out;
 }
-.chevron .right:focus + .menu-container .menu__container--extend {
+
+.right:focus + .menu-container .menu__container--extend {
   transform: translateX(-520px);
 }
-.chevron .left {
+
+.left {
   cursor: pointer;
 }
-.chevron .left + .menu-container .menu__container--extend {
+
+.left + .menu-container .menu__container--extend {
   transition: transform 0.7s ease-in-out;
 }
-.chevron .left:focus + .menu-container .menu__container--extend {
+
+.left:focus + .menu-container .menu__container--extend {
   transform: translateX(510px);
 }
 
@@ -478,6 +482,7 @@ footer .info .info--contact {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   position: relative;
   z-index: 1;
   background-color: #f6f6f6;
@@ -546,37 +551,29 @@ footer .info .info--contact {
     padding-left: 5%;
     padding-right: 5%;
     margin: 0;
-    /*  .navigation{
-            @include boxbasic;
-            @include row;
-            box-sizing: content-box;
-            justify-content: space-between;
-            position: absolute;
-            z-index: 1;
-        }*/
   }
   .main-course .navtab {
     width: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    align-content: space-between;
-    align-self: center;
+    justify-content: space-between;
   }
-  .main-course .menu-container {
-    width: 500px;
+  .main-course .navtab .menu-container {
+    width: 510px;
     padding: 10px;
+    display: flex;
     overflow: hidden;
   }
-  .main-course .menu__container--extend {
-    width: 1500px;
+  .main-course .navtab .menu-container .menu__container--extend {
+    width: 1600px;
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-self: center;
-    gap: 20px;
   }
-  .main-course .restaurant-menu {
+  .main-course .navtab .menu-container .menu__container--extend .restaurant-menu {
     width: 500px;
     padding: 15px;
     margin: 0;
