--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -28,6 +28,7 @@
 .main-course {
   @include boxbasic;
   @include column;
+  justify-content: center;
   position: relative;
   z-index: 1;
   background-color: $light-grey;
@@ -112,37 +113,29 @@
     .navtab {
       @include boxbasic;
       @include row;
-      align-content: space-between;
-      align-self: center;
-    }
-    /*  .navigation{
-            @include boxbasic;
-            @include row;
-            box-sizing: content-box;
-            justify-content: space-between;
-            position: absolute;
-            z-index: 1;
-        }*/
+      justify-content: space-between;
 
-    .menu-container {
-      width: 500px;
-      padding: 10px;
-      overflow: hidden;
-    }
+      .menu-container {
+        width: 510px;
+        padding: 10px;
+        display: flex;
+        overflow: hidden;
 
-    .menu__container--extend {
-      width: 1500px;
-      overflow: hidden;
-      display: flex;
-      flex-direction: row;
-      align-self: center;
-      gap: 20px;
-    }
+        .menu__container--extend {
+          width: 1600px;
+          overflow: hidden;
+          display: flex;
+          flex-direction: row;                  
+          justify-content: space-evenly;
+          align-self: center;
 
-    .restaurant-menu {
-      width: 500px;
-      padding: 15px;
-      margin: 0;
+          .restaurant-menu {
+            width: 500px;
+            padding: 15px;
+            margin: 0;
+          }
+        }
+      }
     }
   }
 }
