--- a/sass/partials/_use-card.scss
+++ b/sass/partials/_use-card.scss
@@ -45,7 +45,7 @@
     }
 
     //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
-    @media (min-width : 768px), (max-width: 1024px) {
+    @media (min-width : 768px) and (max-width: 1024px) {
 
     }
 
